# eyrc23_HB_1282

./: .~lock.wheel_proportions.csv#  Task5b_grader_output1.txt  Task5b_grader_output_final.txt  Task6_bonus_grader_output.txt  Task6_original_grader_output.txt  contours_coordinates.txt  wheel_proportions.csv
hb_task1a_ws/install/: local_setup.sh  setup.sh
hb_task1a_ws/log/: latest_build
hb_task1a_ws/src/hb_task_1a/: setup.py
hb_task1b_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
hb_task1b_ws/log/: latest_build
hb_task1b_ws/rosbag2_2023_10_04-23_57_51/: hb_task_1b_1282.yaml  hb_task_1b_1282_controller.py
hb_task1b_ws/src/hb_task_1b/: package.xml  setup.py
hb_task1b_ws/src/hb_task_1b/launch/: hb_task1b.launch.py
hb_task5_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
hb_task5_ws/log/: latest_build
hb_task5_ws/src/hb_task5a/: setup.cfg  setup.py
hb_task6_ws/install/: local_setup.sh  setup.sh
hb_task6_ws/install/hb_taskbonus/share/hb_taskbonus/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
hb_task6_ws/install/hb_taskbonus/share/hb_taskbonus/launch/: bot1.launch.py  goals.launch.py
hb_task6_ws/log/: latest_build
hb_task_2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
hb_task_2_ws/log/: latest_build
hb_task_4/: andi.py
hb_task_4/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
hb_task_4/log/: latest_build
log/: latest_build
micro_ros_subscriber_wifi/micro_ros_subscriber_wifi_1/: micro_ros_subscriber_wifi_1.ino
micro_ros_subscriber_wifi/micro_ros_subscriber_wifi_2/: micro_ros_subscriber_wifi_2.ino
micro_ros_subscriber_wifi/micro_ros_subscriber_wifi_3/: micro_ros_subscriber_wifi_3.ino
micro_ros_subscriber_wifi/sketch_jan28a/: sketch_jan28a.ino
(+210 files in other folders)
