<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hb_task_1b</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="akshar@todo.todo">akshar</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>gazebo</depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>tf_trasformations</exec_depend>
  <exec_depend>time</exec_depend>
  <exec_depend>math</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>my_robot_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
